            - винесена обробка кінця виразу в метод handleEndOfExpression(..)
            - додано метод popRemainingOperators(..) для додавання всіх операторів до стека які залишились.
     - замінено LinkedList на ArrayDeque.
     - замінено виклик методу makeBaseOperation(..) та обробка операндів

Зміни в Assignment11Part1:
    - видалено класи-оператори які не відносяться до умови.
    - метод main ловить винятки та виводить помилку або результат обчислення.
    - видалено метод printResult(..)
    - додано метод calculate(..) який виконує обчислення вхідного виразу з урахуванням змінних.
    - замінено LinkedList на ArrayDeque.
    - метод setVariables(..) замінено на checkAndPushVariable(..) для коректної роботи з ArrayDeque.
    - змінено метод calculateRPN:
        - метод setVariables(..) перенесено в calculate(..) та змінено назву на checkAndPushVariable(..)
        - додано метод performTheOperation(..) який виконує арифметичну операцію для двох останніх чисел у стеку
        - видалено метод logCalculation(..)
    - змінено метод parse:
        - додано метод handleEndOfExpression(..) для обробки кінця виразу.
        - додано метод popRemainingOperators(..) для додавання всіх операторів до стека які залишились.
    - змінено метод handleOperator(..)
        - додано метод popOperatorsByPrecedence(..) для обробки стеку операторів згідно з пріоритетом.
        - додано метод handleCloseBracket(..) для обробки закриваючої дужки, якщо дужки не парні - викидається виняток.

Зміни в Assignment13Part1:
    - видалено конструктор класу ImageLoader, тепер шлях до файлу передається в метод load(..) як параметр.
    - додано клас SilhouetteCounter - тепер підрахунок силуетів виконується в цьому класі.
        - константи MIN_ERASE_RADIUS, ERASE_RADIUS_SCALE та NOISE_FILTER_RATIO винесено до цього класу.
    - додано клас MaskBuilder для побудови маски силуетів та фону, щоб розділити логіку створення масок від логіки
      пошуку силуетів та фону.