@@ -14,7 +14,7 @@ public class ImageLoader {
      * @return - the loaded BufferedImage
      * @throws IOException - if the file cannot be read or is not a valid image
      */
-    public BufferedImage load(String filePath) throws IOException {
+    public static BufferedImage load(String filePath) throws IOException {
         BufferedImage image = ImageIO.read(new File(filePath));
         if (image == null) {
             throw new IOException("Unsupported image format or corrupted file: " + filePath);
