@@ -24,7 +24,7 @@
      - замінено виклик методу makeBaseOperation(..) та обробка операндів
 
 Зміни в Assignment11Part1:
-    - видалено класи-оператори які не відносяться до умови.
+    - видалено класи-оператори які не відповідають умові.
     - метод main ловить винятки та виводить помилку або результат обчислення.
     - видалено метод printResult(..)
     - додано метод calculate(..) який виконує обчислення вхідного виразу з урахуванням змінних.
@@ -57,6 +57,7 @@
         - метод createSilhouetteMask(..) винесено до класу MaskBuilder.
         - метод countValidSilhouettes(..) видалено, тепер його функції виконує countSilhouettes(..) класу
           SilhouetteCounter.
+        - метод findLargestSilhouetteSize(..) перенесено до класу SilhouetteCounter.
     - зміни в класі Eraser:
         - видалено змінну image з конструктором, тепер зображення не потрібне в класі, оскільки всі операції виконуються
           з булевою маскою.
